Inseri o java script

--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,7 @@
     </div>
         <div class="row">
             <div class="col-xs-12">
-                <input type="number" id="result" class="form-control" readonly>
+                <input type="text" id="result" class="form-control" readonly>
             </div>
         </div>
         <div class="row">
@@ -34,54 +34,54 @@
                 <button id="v9" class="btn1 btn-success btn-block"> 9 </button>
             </div>
             <div class="col-xs-3">
-                <button id="soma" class="btn1 btn-success btn-block"> + </button>
+                <button id="btnMais" class="btn1 btn-success btn-block"> + </button>
             </div>
         </div>
          <div class="row">
             <div class="col-xs-3">
-                <button id="v7" class="btn1 btn-success btn-block"> 4 </button>
+                <button id="v4" class="btn1 btn-success btn-block"> 4 </button>
             </div>
             <div class="col-xs-3">
-                <button id="v8" class="btn1 btn-success btn-block"> 5 </button>
+                <button id="v5" class="btn1 btn-success btn-block"> 5 </button>
             </div>
             <div class="col-xs-3">
-                <button id="v9" class="btn1 btn-success btn-block"> 6 </button>
+                <button id="v6" class="btn1 btn-success btn-block"> 6 </button>
             </div>
             <div class="col-xs-3">
-                <button id="soma" class="btn1 btn-success btn-block"> - </button>
-            </div>
-        </div>
-         <div class="row">
-            <div class="col-xs-3">
-                <button id="v7" class="btn1 btn-success btn-block"> 1 </button>
-            </div>
-            <div class="col-xs-3">
-                <button id="v8" class="btn1 btn-success btn-block"> 2 </button>
-            </div>
-            <div class="col-xs-3">
-                <button id="v9" class="btn1 btn-success btn-block"> 3 </button>
-            </div>
-            <div class="col-xs-3">
-                <button id="soma" class="btn1 btn-success btn-block"> * </button>
+                <button id="btnMenos" class="btn1 btn-success btn-block"> - </button>
             </div>
         </div>
          <div class="row">
             <div class="col-xs-3">
-                <button id="v7" class="btn1 btn-success btn-block"> . </button>
+                <button id="v1" class="btn1 btn-success btn-block"> 1 </button>
             </div>
             <div class="col-xs-3">
-                <button id="v8" class="btn1 btn-success btn-block"> 0 </button>
+                <button id="v2" class="btn1 btn-success btn-block"> 2 </button>
             </div>
             <div class="col-xs-3">
-                <button id="v9" class="btn1 btn-success btn-block"> = </button>
+                <button id="v3" class="btn1 btn-success btn-block"> 3 </button>
             </div>
             <div class="col-xs-3">
-                <button id="soma" class="btn1 btn-success btn-block"> / </button>
+                <button id="btnMult" class="btn1 btn-success btn-block"> * </button>
+            </div>
+        </div>
+         <div class="row">
+            <div class="col-xs-3">
+                <button id="btnPonto" class="btn1 btn-success btn-block"> . </button>
+            </div>
+            <div class="col-xs-3">
+                <button id="v0" class="btn1 btn-success btn-block"> 0 </button>
+            </div>
+            <div class="col-xs-3">
+                <button id="btnIgual" class="btn1 btn-success btn-block"> = </button>
+            </div>
+            <div class="col-xs-3">
+                <button id="btnDividir" class="btn1 btn-success btn-block"> / </button>
             </div>
         </div>
         <div class="row">
             <div class="col-xs-12">
-                <button id="clear" class="btn btn-success btn-block"> LIMPAR </button>
+                <button id="btnClear" class="btn btn-success btn-block"> LIMPAR </button>
             </div>
         </div>
     </div>
